--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+annotated-types==0.7.0
+anyio==4.8.0
 attrs==25.1.0
 backports.tarfile==1.2.0
 beautifulsoup4==4.13.1
@@ -6,9 +8,13 @@ cffi==1.17.1
 charset-normalizer==3.4.1
 chromedriver-binary==132.0.6834.159.0
 click==8.1.8
+concurrent-log-handler==0.9.25
 cryptography==44.0.0
+distro==1.9.0
 docutils==0.21.2
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 id==1.5.0
 idna==3.10
 importlib_metadata==8.6.1
@@ -16,6 +22,7 @@ jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.1.0
 jeepney==0.8.0
+jiter==0.8.2
 joblib==1.4.2
 keyring==25.6.0
 lxml==5.3.0
@@ -25,13 +32,18 @@ more-itertools==10.6.0
 nh3==0.2.20
 nltk==3.9.1
 numpy==2.2.2
+openai==1.61.0
 outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
+portalocker==3.1.1
 pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
 Pygments==2.19.1
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2025.1
 readme_renderer==44.0
 regex==2024.11.6
